Fix the added row being partially behind adding row when pressing up arrow to submit the form

--- a/resources/public/styles.css
+++ b/resources/public/styles.css
@@ -30,7 +30,7 @@ header {
 }
 
 main {
-    margin: 1.5rem 2rem;
+    margin: 1.5rem 2rem 5rem;
 }
 
 .spreadsheet {
